--- a/class.html
+++ b/class.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+i
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
@@ -49,7 +49,7 @@
                 <li class="">
                   <a class="" href="">
                     <img src="images/mail.png" alt="" />
-                    <span>demo@gmail.com</span>
+                    <span>robin@gmail.com</span>
                   </a>
                 </li>
                 <li class="">
